--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="navbar-wrapper">
-      <h1>BadgeBuddies <i class="fa-solid fa-frog" style="color: #04e73c;"></i></h1>
+      <h1>BadgeBuddies <i class="fa-solid fa-frog" style="color: #8ac926;"></i></h1>
     </div>
     <input
       class="searchbar"
